Remove text justification on mobile to fix word spacing issues

--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -28,7 +28,6 @@
   font-weight: 600;
   line-height: 32px;
   letter-spacing: 0.5px;
-  text-align: justify;
 }
 
 @media only screen and (min-width: 600px) {
